--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,8 @@
       name="description"
       content="Web site created using create-react-app"
     />  
-    
     <link rel="stylesheet" href="../src/shared/styles/StylesGenera.css">    
-    <title>The Art Space</title>
+    <title>Capital Market</title>
   </head>
   <body>
     <div id="root"></div>
